# csds413-assignments

./: .gitignore  README.md  assignment.tex
assignment1/: assignment1.tex  pyproject.toml
assignment1/task1_comparing_visualizations/: comparing_visualizations.tex  context.tex  dataset1.tex  dataset2.tex  dataset3.tex  titlepage.tex
assignment1/task1_comparing_visualizations/datasets/clean/: album_sales_by_genre.csv  algo_accuracy_by_epoch.csv  ratings_by_type.csv
assignment1/task1_comparing_visualizations/datasets/raw/: Top_10_Albums_By_Year.csv
assignment1/task1_comparing_visualizations/scripts/: cleaning_utils.py  error_bar_plots.py  histogram_plots.py  strip_plots.py
assignment1/task2_fitting_comparing_distributions/: context.tex  dataset1.tex  dataset2.tex  dataset3.tex  dataset4.tex  fitting_comparing_distributions.tex  titlepage.tex
assignment1/task2_fitting_comparing_distributions/datasets/exponential/clean/: birth_intervals.csv
assignment1/task2_fitting_comparing_distributions/datasets/exponential/raw/: brisbane_births_intervals.csv
assignment1/task2_fitting_comparing_distributions/datasets/exponential/synth/: birth_intervals_exponential.csv  birth_intervals_gaussian.csv  birth_intervals_powerlaw.csv  birth_intervals_uniform.csv
assignment1/task2_fitting_comparing_distributions/datasets/normal/clean/: sepal_width.csv  sepal_widths.csv
assignment1/task2_fitting_comparing_distributions/scripts/: cleaning_utils.py  dists_fit_generate.py  histogram.py  kstest.py  qqplot.py  qqplot_loglog.py
(+15 files in other folders)
